--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
 @import url('Component/Home.css');
 @import url('Component/Login.css');
 @import url('Component/Register.css');
+@import url('Component/ResetPassword.css');
 
 /* Customer CSS */
 
