--- a/public/css/Component/ResetPassword.css
+++ b/public/css/Component/ResetPassword.css
@@ -1,10 +1,19 @@
 .ResetPassword-main {
 
+  .ResetPassword-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; 
+    align-items: center;
+    padding-top: 60px; 
+  }
+  
+
   body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #fefbfb;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +28,7 @@
   }
   
   .panel-default {
-    background-color: #f5f5f5;
+    background-color: #fdfdfd;
     border: 1px solid #d1d0d0;
     border-radius: 4px;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
@@ -34,48 +43,53 @@
   }
   
   .form-group {
-    margin-bottom: 15px;
-    width: 100%; /* Ensure input width is 100% */
+    margin-bottom: 20px;
+   
+    width: 90%;
+    margin-right: 20px; /* Ensure input width is 100% */
   }
-  
+ 
   .input-group-addon {
-    background-color: #337ab7;
+    background-color: #1ca557;
     color: #fff;
-    border: 1px solid #337ab7;
+    border: 1px solid #178a49;
   }
   
   
   .form-control {
     border: 1px solid #ccc;
     border-radius: 4px;
-    height: 40px;
+    height: 20px;
     padding: 8px;
     font-size: 16px;
-    width: 100%; /* Ensure input width is 100% */
+    width: 90%; 
   }
   
   .btn-primary {
-    background-color: #337ab7;
+    background-color: #1ca557;
     color: #fff;
-    border: 1px solid #2e6da4;
+    border: 1px solid #1a8c4b;
     border-radius: 4px;
     height: 40px;
     font-size: 16px;
     cursor: pointer;
-    width: 100%; /* Ensure button width is 100% */
+    width: 114%;
+    margin-top: -100px;
+    
   }
   
   .btn-primary:hover {
-    background-color: #286090;
-    border: 1px solid #204d74;
+    background-color: #37b66e;
+    border: 1px solid #1ca557;
   }
   
   h3 {
+    margin-top: 10px;
     text-align: center; /* Center the content horizontally */
   }
   
   h3 i.fa-lock {
-    font-size: 5em;
+    font-size: 4em;
     margin-bottom: 20px;
     color: black; /* Set the desired color for the lock icon */
     display: block; /* Ensure the icon is centered within the <h3> element */
@@ -83,18 +97,49 @@
   }
   h5 {
     font-size: 34px; /* Set the desired font size for the heading */
-    margin-bottom: 15px;
+    margin-top: 45px;
+    font-weight: 300;
     
   }
   
   p {
     font-size: 16px; /* Set the desired font size for the paragraph */
-    margin-bottom: 20px; /* Adjust margin for spacing */
+    margin-bottom: 20px;
+    
   }
   
-  .form{
-  
+  .input-container {
+    position: relative;
+    margin-bottom: 40px;
   }
+  
+  .icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 3px;
+    color: #555;
+    background-color: #f0f0f0; 
+    padding: 9px; 
+    border-radius: 1px; 
+  }
+  
+  
+  .form-control {
+    padding-left: 60px; /* Adjust the padding to make room for the icon */
+  }
+  
+  .error-div {
+    color: red;
+    font-size: 0.8em;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    text-align: left;
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+  }
+  
   
 }
 
