--- a/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
@@ -287,7 +287,7 @@
     }
 
     .View-content {
-        width: 500px;
+        width: 600px;
         background: white;
         font-family: 'poppins', sans-serif;
         border-radius: 6px;
@@ -377,8 +377,9 @@
         background: var(--button-hover-green);
     }
 
-    #dropdown {
-        width: 200px;
+    /* #dropdown {
+        width: 70%;
+        height: 45px;
         font-size: 16px;
         font-family: Arial, sans-serif;
         padding: 8px;
@@ -406,24 +407,114 @@
         top: 50%;
         transform: translateY(-50%);
         pointer-events: none;
+        z-index: 2;
     }
 
     #dropdown option {
         padding: 8px;
         font-family: Arial, Helvetica, sans-serif;
         transition: background-color 0.3s ease;
+     
         
     }
 
     #dropdown option:hover {
         background-color: #f0f0f0;
+    } */
+
+ 
+    .dropdown {
+        position: relative;
+        display: inline-block;
+        width: 80%;
+        text-align: center;
+        /* display: inline-block; */
     }
 
+    .arrow-down {
+        width: 0; 
+        height: 0; 
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        border-top: 5px solid #000;
+    }
+    
+    .dropdown-toggle {
+        padding: 10px 20px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 80%;
+        text-align: left;
+        background-color: #fff;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-left: 27px;
+    }
+    
+    .dropdown-menu {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 88.5%;
+        z-index: 1;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        margin-left: 27px;
+        max-height: 167px;
+        overflow: scroll;
+        transition: max-height 0.4s ease-in-out; 
+    }
+
+    .dropdown-menu.open {
+        max-height: 200px;
+    }
+    
+
+    .dropdown-menu.show {
+        display: block; 
+        
+    }
+    
+    .dropdown-menu li {
+        padding: 8px 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        cursor: pointer;
+    }
+
+    .dropdown-item .collector-id,
+    .dropdown-item .collector-name,
+    .dropdown-item .vehicle-type {
+        flex: 1;
+        text-align: left;
+    }
+
+    .dropdown-menu li img{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        margin-right: 20px;
+    }
+    
+    .dropdown-menu li:hover {
+        background-color: #f0f0f0;
+    }
+    
+
+   
     .assigned_count{
         position: absolute;
         right: 10px;
-        top: 50%;
-       
+        top: 50%;      
         width: 20px; /* Set the width */
         height: 20px; /* Set the height */
         border-radius: 50%; /* Create a circular border */
@@ -433,6 +524,52 @@
         display: flex;
         align-items: center;
         
+    }
+
+    .assign-line{
+        width: 40px;
+        height: 2.5px;
+        background-color: var(--green-color-one);
+        border: none;
+    }
+
+    .assigned-map-container{
+        width: 80%;
+        height: 250px;
+        margin: 20px;
+        border: 1px solid red;
+    }
+
+    .assigned-req-count-container p{
+        margin: 17px 0;
+        font-size: 14px;
+
+    }
+
+    .assigned-req-count-container span{
+        position: relative;
+        margin: 10px;
+    }
+
+    .assigned-req-count-container span::before{
+        content: attr(data-count); /* Use attr(data-count) to display the count */
+        position: absolute;
+        background: var(--green-color-one);
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: -10px; /* Adjust the top position to center the circle */
+        left: 50%; /* Adjust the left position to center the circle */
+        transform: translateX(-50%);
+        
+      
+ 
     }
 
     .overlay {
