--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,6 +143,7 @@
 @import url('Component/Admin/Admin_Center_Main_Request_Assigned.css');
 @import url('Component/Admin/Admin_Center_Main_Request_Cancelled.css');
 @import url('Component/Admin/Admin_Center_Main_Request_Completed.css');
+@import url('Component/Admin/Admin_Reports.css');
 
 @import url('Component/Admin/Admin_Garbage_Types_View.css');
 
