--- a/public/css/Component/ResetPassword.css
+++ b/public/css/Component/ResetPassword.css
@@ -31,7 +31,7 @@
     background-color: #fdfdfd;
     border: 1px solid #d1d0d0;
     border-radius: 4px;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
   }
   
   .panel-body {
@@ -62,7 +62,8 @@
     height: 20px;
     padding: 8px;
     font-size: 16px;
-    width: 90%; 
+    width: 90%;
+    position: relative; 
   }
   
   .btn-primary {
@@ -74,7 +75,7 @@
     font-size: 16px;
     cursor: pointer;
     width: 114%;
-    margin-top: -100px;
+    margin-top: 20px;
     
   }
   
@@ -110,34 +111,32 @@
   
   .input-container {
     position: relative;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
   }
   
   .icon {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    left: 3px;
+    left: 5px; /* Adjust the left position to provide space */
     color: #555;
     background-color: #f0f0f0; 
     padding: 9px; 
-    border-radius: 1px; 
+    border-radius: 1px;
+    z-index: 2;
   }
   
   
   .form-control {
-    padding-left: 60px; /* Adjust the padding to make room for the icon */
+    padding-left: 60px;
+   
   }
   
   .error-div {
     color: red;
     font-size: 0.8em;
     margin-top: 4px;
-    margin-bottom: 4px;
     text-align: left;
-    position: absolute;
-    bottom: -20px;
-    left: 0;
   }
   
   
