--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,7 @@
 
 @import url('Component/Customer/Customer_Discount_Agent_View.css');
 @import url('Component/Customer/Customer_Discount_Agent.css');
+@import url('Component/Customer/Customer_GarbageTypes.css');
 
 /* Colletor CSS */
 
