--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -14,6 +14,28 @@
         overflow: scroll;
     }
 
+    .map-cont {
+        background-color: var(--background-color-right) !important;
+        width: 50%;
+        height: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        border-radius: 10px;
+    }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
+    }
+
     .main-right {
 
         .main-top {
@@ -318,7 +340,39 @@
             animation: bounceAndMove 2s infinite;
         }
 
+
+        .map-cont .top-cont {
+            display: flex;
+        }
+
+        .map-cont .top-cont i {
+            font-size: 25px;
+            margin-right: 10px;
+        }
+
         .map_pop {
+            display: flex;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            z-index: 4;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            overflow: hidden;
+            transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+            box-shadow: var(--box-shadow);
+            border-radius: 10px;
+            width: 100%;
+            height: 100%;
+        }
+
+        .map_pop.active {
+            transform: translate(-50%, -50%) scale(1);
+        }
+
+        /* .map_pop {
             position: fixed;
             top: 0;
             left: 0;
@@ -330,13 +384,26 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
+        } */
+
+
+        .map_pop h3 {
+            font-size: 21px;
+            margin-bottom: 20px;
+            font-weight: 100;
+        }
+
+        .map_pop p {
+            font-size: 15px;
+            margin-top: 8px;
+            margin-bottom: 8px;
+            font-weight: 100;
         }
 
         #map {
-            width: 55%;
+            width: 78%;
             height: 55%;
             padding: 10px;
-            background-color: #f1f2f6;
             border-radius: 10px;
             padding: 20px;
             padding-bottom: 40px;
@@ -345,8 +412,8 @@
         .buttons-container {
             display: flex;
             justify-content: space-around;
-            margin-top: 20px;
-            width: 30%;
+            margin-top: 5px;
+            width: 70%;
         }
 
         #markLocationBtn,
