--- a/public/css/Component/Home.css
+++ b/public/css/Component/Home.css
@@ -1,254 +1,126 @@
 .Home-main {
-    a {
-        text-decoration: none;
-        color: inherit;
-    }
-
     .main {
         width: 100%;
-        height: 731px;
-        background-image: linear-gradient(45deg, #FFFFFF -26.62%, #8CF889 59.43%);
+        background-color: white;
+        height: 725px;
         display: grid;
-        grid-template-rows: 25% 75%;
+        grid-template-rows: 15% 85%;
+        font-family: Arial, Helvetica, sans-serif;
     }
+
 
     .main-top {
         display: flex;
-        flex-direction: row;
+        align-items: center;
         justify-content: space-between;
     }
 
-    .main-top-left {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-left: 150px;
+    .main-top img {
+        height: 90px;
+        width: auto;
+        margin-top: 30px;
+        margin-left: 140px;
     }
 
-    .main-top-right {
-        width: 700px;
-        height: auto;
+    .set {
         display: flex;
-        flex-direction: row;
+        gap: 40px;
         align-items: center;
-        justify-content: space-around;
-        margin-right: 100px;
-        font-family: Inter;
-        font-size: 20px;
-        font-weight: 650;
-        line-height: 29px;
-        letter-spacing: 0.01em;
-        text-align: left;
-        padding-bottom: 40px;
+        margin-right: 150px;
+
     }
 
-    .main-top-right button {
-        width: 150px;
-        height: 36px;
-        padding: 15px, 30px, 15px, 30px;
-        border-radius: 100px;
-        gap: 10px;
-        background: #1B6652;
+    .set p {
+        font-size: 17px;
+        color: #414143;
+        cursor: pointer;
+        transition: color 0.3s;
+        letter-spacing: 0.03rem;
+    }
+
+    .set p:hover {
+        color: d#414143;
+    }
+
+    .set button {
+        font-size: 16px;
+        background-color: #1ca557;
         color: white;
-        font-size: 18px;
+        padding: 7px 20px;
         border: none;
-        border-radius: 1px solid white;
+        border-radius: 10px;
         cursor: pointer;
-        letter-spacing: 0.06em;
-        font-weight: 600;
+        transition: background-color 0.3s;
     }
 
-    .main-top-right p {
-        cursor: pointer;
+    .set button:hover {
+        background-color: #19954e;
     }
 
     .main-bottom {
+        display: grid;
+        grid-template-columns: 30% 70%;
+    }
+
+    .main-bottom-right {
         display: flex;
-        flex-direction: row;
-        font-family: Inter;
+        align-items: center;
+        justify-content: center;
+        box-sizing: border-box;
+        margin-left: 50px;
     }
 
-    .main-bottom-left {
-        width: 575px;
-        margin-left: 180px;
-    }
-
-    .main-bottom-left-h2 {
-        font-size: 50px;
-        margin-bottom: 40px;
-        margin-top: 20px;
-        font-family: Inter;
-        font-weight: 600;
-    }
-
-    .main-bottom-left p {
-        font-size: 25px;
-        margin-bottom: 50px;
-        width: 410px;
+    .main-bottom img {
+        width: 100%;
+        height: 85%;
     }
 
     .main-bottom-right img {
-        width: 77%;
-        height: 86%;
+        max-width: 100%;
+        height: auto;
+        display: block;
+        transition: opacity 1s ease-in-out;
+        width: 70%;
+        height: 75%;
+        border-radius: 30px;
+    }
+
+    .main-bottom-left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        box-sizing: border-box;
+        padding: 140px;
+
+    }
+
+    .main-bottom-left h1 {
+        font-size: 60px;
+        width: 100px;
+        color: #1ca557;
+    }
+
+    .main-bottom-left p {
+        font-size: 21px;
+        width: 400px;
+        color: #414143;
+        margin-top: 10px;
+        margin-bottom: 28px;
+        letter-spacing: 0.005rem;
     }
 
     .main-bottom-left button {
-        width: 225px;
-        height: 50px;
-        padding: 15px, 30px, 15px, 30px;
-        border-radius: 100px;
-        gap: 10px;
-        background: #1B6652;
-        color: white;
-        font-size: 22px;
-        border: none;
-        border-radius: 1px solid white;
-        cursor: pointer;
-        letter-spacing: 0.06em;
-        font-weight: 600;
-    }
-
-    .middle {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: 600px;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .middle-right {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 75%;
-
-    }
-
-    .middle-right img {
-        width: 550px;
-        height: 480px;
-        margin-left: 100px;
-    }
-
-    .middle-left {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-        height: 100%;
-        width: 100%;
-    }
-
-    .middle-left h1 {
-        margin-top: 40px;
-        text-align: left;
-        margin-bottom: 65px;
-        font-family: Inter;
-        font-size: 40px;
-    }
-
-    .middle-left-content {
-        margin-bottom: 40px;
-    }
-
-    .middle-left-content-top {
-        display: flex;
-        flex-direction: row;
-        font-size: 20px;
-        margin-bottom: 20px;
-        font-family: Inter;
-        font-weight: 500;
-        text-align: left;
-    }
-
-    .middle-left-content-top img {
-        margin-right: 40px;
-    }
-
-    .middle-left-content-p {
-        padding-left: 64px;
-        font-family: Inter;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 22px;
-        letter-spacing: 0em;
-        text-align: left;
         font-size: 18px;
-        width: 500px;
+        background-color: #1ca557;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s;
     }
 
-    @media screen and (max-width: 1094px) {
-        .main-top img {
-            display: none;
-        }
-
-        .main-top-left {
-            display: none;
-        }
-
-        .main-top-right {
-            margin-right: 0px;
-            width: 70%;
-            font-size: 18px;
-        }
-
-        .main-top {
-            justify-content: center;
-            align-items: center;
-        }
-
-        .main-bottom-right {
-            display: none;
-        }
-
-        .main-bottom {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .main-bottom-left {
-            display: flex;
-            flex-direction: column;
-
-            margin: 0;
-        }
-
-        .middle-right {
-            display: none;
-        }
-
-
-    }
-
-    @media screen and (max-width: 616px) {
-        .main-bottom-left h2 {
-            font-size: 35px;
-        }
-
-        .main-bottom-left {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-        }
-
-        .main-bottom-left p {
-            width: 65%;
-        }
-
-        .main-bottom-left h2 {
-            font-size: 35px;
-
-        }
-
-        .main-bottom-left-h2 {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-        }
+    .main-bottom-left button:hover {
+        background-color: #19954e;
     }
 }
