--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,7 @@
 @import url('Component/Customer/Customer_Discount_Agent_View.css');
 @import url('Component/Customer/Customer_Discount_Agent.css');
 @import url('Component/Customer/Customer_GarbageTypes.css');
+@import url('Component/Customer/Customer_Analatics.css');
 
 /* Colletor CSS */
 
