--- a/public/css/Component/Customer/Customer_Analatics.css
+++ b/public/css/Component/Customer/Customer_Analatics.css
@@ -117,8 +117,9 @@
             }
 
             .top-bar-left p {
-                margin-top: 10px;
+                margin-top: 2px;
                 font-size: 15px !important;
+                width: 200px;
             }
 
             .date-box {
@@ -159,8 +160,9 @@
                 }
 
                 p {
-                    font-size: 15px;
+                    font-size: 14px;
                     margin-top: 2px;
+                    margin-left: 2px;
                 }
             }
         }
@@ -176,6 +178,7 @@
             transition: background-color 0.3s ease;
             letter-spacing: 0.03rem;
             margin-bottom: 15px;
+            margin-right: 15px;
         }
 
         button:hover {
