--- a/public/css/Component/Admin/Admin_Admin_View.css
+++ b/public/css/Component/Admin/Admin_Admin_View.css
@@ -145,6 +145,19 @@
     }
 
 
+    
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
+    }
+
+
         /*Delete confirm popup*/
         .delete_confirm {
             position: fixed;
