--- a/public/css/Component/Customer/Customer_Analatics.css
+++ b/public/css/Component/Customer/Customer_Analatics.css
@@ -96,7 +96,7 @@
             box-sizing: border-box;
             display: flex;
             align-items: center;
-            padding-top: 38px;
+            padding-top: 15px;
 
         }
 
@@ -226,7 +226,18 @@
         box-sizing: border-box;
         display: flex;
         padding: 0px 10px;
-        height: 125px;
+        height: 120px;
+    }
+
+    .credit-section .cont {
+        opacity: 0;
+        transform: translateY(-20px);
+        transition: opacity 0.5s ease, transform 0.5s ease;
+    }
+
+    .credit-section .cont.fade-in {
+        opacity: 1;
+        transform: translateY(0);
     }
 
     .credit-section {
@@ -306,6 +317,18 @@
             height: 220px;
             padding: 30px;
         }
+
+        .left-cont {
+            opacity: 0;
+            transform: translateY(-20px);
+            transition: opacity 0.5s ease, transform 0.5s ease;
+        }
+
+        .left-cont.fade-in {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
 
         .left-cont {
             i {
